tests/parser/invalid/err_lonely_else.c
int main() {
  else { }
}
// else not expected as a standalone statement; should error near else